--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<h1>SimTIVA is a computer simulation program to simulate delivery of total intravenous anaesthesia (TIVA) using a target-controlled infusion (TCI) pump. This progressive web app (PWA) is designed for use on smartphones, tablets and computers.</h1>
 					<br><b>Written by Terence Luk, 2023</b>. This work is licensed under GNU General Public License v3.0. Read more about the project <a href='https://simtiva.blogspot.com/' target='_blank'>here</a>, or contact me on <a href='https://twitter.com/simtiva_app' target='_blank'>Twitter/X</a> for ideas, suggestions or comments. Your advice is greatly appreciated!
 					<br>
-					<br>This is an open source project and the source code is hosted on <a href='https://github.com/luktinghin/simtiva/' target='_blank'>GitHub</a> on the public domain. Everyone can see the code to SimTIVA.
+					<br>This is an open source project and the source code is published on <a href='https://github.com/luktinghin/simtiva/' target='_blank'>GitHub</a>.
 					<br>Last updated 15/11/2023 (V4.1) Build 89.
 					<br>
 					<br>The purposes are: (1) <i> To simulate TCI/TIVA for educational purposes</i>, and (2) <i>Potentially, to help deliver TCI/TIVA in a low resource setting with no TCI pumps available.</i>
@@ -111,7 +111,7 @@
               		</div>
 					<div style="padding-top:1rem;">
 					<a class="button wide" onclick="hideallmodal();">Back</a>
-					<a class="button muted right" id="btn_disclaimer" onclick="displayDisclaimer();">Disclaimer</a><button onclick="importDialog()">Hi</button>
+					<a class="button muted right" id="btn_disclaimer" onclick="displayDisclaimer();">Disclaimer</a><button onclick="importDialog()" style="opacity:0">Hi</button>
 					</div>
 				</div>
 			</div>
