Preview in ml and added 40mcg/ml remi

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 								<option value="10">10mcg/ml</option>
 								<option value="20" selected>20mcg/ml</option>
 								<option value="25">25mcg/ml</option>
+								<option value="40">40mcg/ml</option>
 								<option value="50">50mcg/ml</option>
 								<option value="custom">Custom</option>
 							</select>
@@ -395,6 +396,7 @@
 										<option value="10">10mcg/ml</option>
 										<option value="20" selected>20mcg/ml</option>
 										<option value="25">25mcg/ml</option>
+										<option value="40">40mcg/ml</option>
 										<option value="50">50mcg/ml</option>
 										<option value="100">100mcg/ml</option>
 										<option value="custom">Custom</option>
