--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 			<div class="modal-content" id="modalLoadcontent">
 				<div class="modal-header" id="modalLoadTitle">LOAD SIM FILE</div>
 				<div class="modal-body" style="padding-bottom:0">
-					<span id="modalLoadDescription">Select a SIM-FILE to load:</span><span id="load_about_btn" onclick="displayloadabout();"><i class="fas fa-question-circle"></i></span>
+					<span id="modalLoadDescription">Select a SIM-FILE to load:</span><span id="load_about_btn" style="display: inline" onclick="displayloadabout();"><i class="fas fa-question-circle"></i></span>
 					<div id="fileselection">
 						<input type='file' id='myFile' onchange='previewFile()' style="width: 100%"/>
 					</div>
