finetune exp-imp interface

--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
 					<div id="warningleft"><i class="fas fa-exclamation-circle" id="warningicon"></i></div>
 					<div id="warningright">
 						<div style="font-size:80%; font-weight:bold; color:red; border-bottom:1px solid #e4c4c4; padding-bottom:2px"><span id="warningdescriptor">REMINDER - next change in </span><div id="warningcounter">10s</div></div>
-						<div style="padding-top:5px font-size:90%" id="warningprompt">_</div>
+						<div style="" id="warningprompt">_</div>
 					</div>
 				</div>
 				<div class="prompts_card" id="preview" style="border-color:#a9c5e4">
@@ -1162,7 +1162,7 @@
 					<div id="previewleft"><i class="fas fa-arrow-circle-up" id="previewicon"></i></div>
 					<div id="previewright">
 						<div style="font-size:80%; font-weight:bold; border-bottom:1px solid #a9c5e4; padding-bottom:2px; line-height:1.2">PREVIEW: To achieve target <div id="preview_cpt"></div></div>
-						<div style="padding-top:5px; font-size:90%; line-height:1.2" id="preview_msg"></div>
+						<div style="line-height:1.2;padding-top:2px;font-size:95%" id="preview_msg"></div>
 					</div>
 				</div>
 				<div class="prompts_card" id="prompt" style="border-color:#9bc99d">
@@ -1171,7 +1171,7 @@
 					<div id="promptright">
 						<div style="font-size:80%; font-weight:bold; border-bottom:1px solid #9bc99d; padding-bottom:2px"><span id="prompt_msg2">Current rate</span></div>
 						<div id="progressbar"></div>
-						<div style="padding-top:5px font-size:90%" id="prompt_msg"><span id="status">Waiting to start</span><span id="infusiondescriptor"></span></div>
+						<div style="" id="prompt_msg"><span id="status">Waiting to start</span><span id="infusiondescriptor"></span></div>
 					</div>
 				</div>
 			</div>
