support CPT, style update

--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
 				</div>
 			-->
 				<a class="button" id="btn_startCet0" onclick="start_cet();">Start</a>
-				<a class="button" id="btn_pauseCet0" onclick="pauseCpt(0); cet_active=0.5;">Pause</a>
+				<a class="button" id="btn_pauseCet0" onclick="pauseCpt(0);">Pause</a>
 				<span id="IB_about_btn0" onclick="displayIBabout();"><i class="fas fa-question-circle"></i></span>
 				<!--
 				<a class="button muted" id="btn_bolusconverter" onclick="start_cet_bolus();"><i class="fas fa-syringe"></i></a>
@@ -1357,7 +1357,7 @@
 				</div>
 			-->
 				<a class="button" id="btn_startCet1" onclick="start_cet_complex(document.getElementById('inputDesiredCe1').value*1,1);">Start</a>
-				<a class="button" id="btn_pauseCet1" onclick="pauseCpt(1); cet_active=0.5;">Pause</a>
+				<a class="button" id="btn_pauseCet1" onclick="pauseCpt(1);">Pause</a>
 				<span id="IB_about_btn1" onclick="displayIBabout();"><i class="fas fa-question-circle"></i></span>
 				<!--
 				<a class="button muted" id="btn_bolusconverter" onclick="start_cet_bolus();"><i class="fas fa-syringe"></i></a>
