minor changes CpT CeT

--- a/index.html
+++ b/index.html
@@ -1128,13 +1128,13 @@
 								<div class="pop_title_box cp" id="pop_cp"><span id="cp_copy">-</span></div>
 							</div>
 							<div id="pop_right_edit_cp">
-								Edit Cp
+								Edit CpT
 							</div>
 							<div class="pop_right_elem">
 								<div class="pop_title_box ce" id="pop_ce"><span id="ce_copy">-</span></div>
 							</div>
 							<div id="pop_right_edit_ce">
-								Edit Ce
+								Edit CeT
 							</div>
 							<div class="pop_right_elem">
 								<div class="pop_title_box infrate" id="pop_infrate"><span id="infrate_copy">-</span></div>
