--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,15 @@
 				<div>Preview:</div>
 				<div id="numpad_preview_msg">Waiting for input</div>
 			</div>
-
+			<!--
+			<div id="numpadManual">
+				<div id="bolusButtonContainer">
+					<a class="button bolus" id="numpadBolus3"></a>
+					<a class="button bolus" id="numpadBolus2"></a>
+					<a class="button bolus" id="numpadBolus1"></a>
+				</div>
+			</div>
+			-->
 			<div id="numpadLine">
 			</div>
 			<div id="numpadBackground">
