--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
 						<div class="numkeyRow">
 							<div class="numkey special" id="btn_confirm_numpad">Enter</div>
 							<div class="numkey special" onclick="resetNumpad();">Reset</div>
-							<div class="numkey special" onclick="hideNumpad();">Cancel</div>
+							<div class="numkey special" onclick="cancelNumpad();">Cancel</div>
 						</div>
 					</div>
 				</div>
