--- a/index.html
+++ b/index.html
@@ -1733,7 +1733,7 @@
 							</select>
 						</td>
 					</tr>
-					<tr class="" id="option_defaultrateunit"><td>Default rate unit</td>
+					<tr class="" id="option_defaultrateunit"><td>Default rate unit <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:160px">Unit for entering manual mode infusion rate, e.g. "ml/h" vs "mg/kg/h" (or appropriate units)</span></i></td>
 						<td>
 							<select id="select_defaultrateunit">
 								<option value="mlh">ml/h</option>
