--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<br><b>Written by Terence Luk, 2023</b>. This work is licensed under GNU General Public License v3.0. Read more about the project <a href='https://simtiva.blogspot.com/' target='_blank'>here</a>, or contact me on <a href='https://twitter.com/simtiva_app' target='_blank'>Twitter/X</a> for ideas, suggestions or comments. Your advice is greatly appreciated!
 					<br>
 					<br>This is an open source project and the source code is published on <a href='https://github.com/luktinghin/simtiva/' target='_blank'>GitHub</a>.
-					<br>Last updated 17/12/2023 (V4.4) Build 95.
+					<br>Last updated 17/12/2023 (V4.4) Build 96.
 					<br>
 					<br>The purposes are: (1) <i> To simulate TCI/TIVA for educational purposes</i>, and (2) <i>Potentially, to help deliver TCI/TIVA in a low resource setting with no TCI pumps available.</i>
 					<br>Coding is done in Javascript. The code to the mathematical calculations are based on "STANPUMP", which is freely available from the link below. The pharmacokinetic models available in this program are Marsh, Schnider, Paedfusor and Eleveld for propofol, and Minto and Eleveld for remifentanil. For instructions on using this app, visit the 'Help' page. For documentation of the pharmacological details, visit the 'Documentation' page.
@@ -1198,9 +1198,9 @@
 				<table class="table-control line" id="tableInfusionRate0">
 					<tr class="fr">
 						<td>
-							<div id="infusionratecontainer0"><span id="infusionratedescription0">Infusion rate (ml/h)</span> 
-								<span id="infusionrateselector0" onclick="dropdownshow(0)"><i class="fas fa-chevron-down"></i></span>
-								<div id="infusionratedropdown0">
+							<div class="infusionratecontainer" id="infusionratecontainer0"><span id="infusionratedescription0">Infusion rate (ml/h)</span> 
+								<span class="infusionrateselector" id="infusionrateselector0" onclick="dropdownshow(0)"><i class="fas fa-chevron-down"></i></span>
+								<div class="infusionratedropdown" id="infusionratedropdown0">
 									<a class="infusionratedropdownitem" id="infusionrateoption0" onclick="setInfusionUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; ml/h</a>
 									<a class="infusionratedropdownitem" id="infusionrateoption1" onclick="setInfusionUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; mg/kg/h</a>
 								</div>
@@ -1209,7 +1209,18 @@
 						<td><input type="number" inputmode="decimal" id="inputInfusion0" min="0" max="1200" step="0.01" placeholder=" " onchange=""></td></tr>
 				</table>
 				<table class="table-control space" id="tableInitialBolus0">
-					<tr><td>Initial bolus (<span class="infused_units"></span>)</td><td><input type="number" inputmode="decimal" id="inputBolus_initial0" min="0" max="2000" step="0.1" placeholder=" " ></td></tr>
+					<tr>
+						<td>
+							<div class="infusionratecontainer" id="boluscontainer0"><span id="bolusdescription0">Initial bolus (<span class="infused_units"></span>)</span>
+								<span class="infusionrateselector" id="bolusselector0" onclick="dropdownshowbolus(0,'')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdown0">
+									<a class="infusionratedropdownitem" id="bolusoption0_0" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoption1_0" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoption2_0" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+							</div>
+						</td><td><input type="number" inputmode="decimal" id="inputBolus_initial0" min="0" max="2000" step="0.1" placeholder=" " ></td></tr>
 				</table>
 				<a class="button" id="btn_start0" onclick="start_manual(0);">Start</a>
 				<a class="button" id="btn_pause0" onclick="pause(0);">Pause</a>
@@ -1221,9 +1232,9 @@
 				<table class="table-control line" id="tableInfusionRate1">
 					<tr class="fr">
 						<td>
-							<div id="infusionratecontainer1"><span id="infusionratedescription1">Infusion rate (ml/h)</span> 
-								<span id="infusionrateselector1" onclick="dropdownshow(1)"><i class="fas fa-chevron-down"></i></span>
-								<div id="infusionratedropdown1">
+							<div class="infusionratecontainer" id="infusionratecontainer1"><span id="infusionratedescription1">Infusion rate (ml/h)</span> 
+								<span class="infusionratecontainer" id="infusionrateselector1" onclick="dropdownshow(1)"><i class="fas fa-chevron-down"></i></span>
+								<div class="infusionratedropdown" id="infusionratedropdown1">
 									<a class="infusionratedropdownitem" id="infusionrateoptioncopy0" onclick="setInfusionUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; ml/h</a>
 									<a class="infusionratedropdownitem" id="infusionrateoptioncopy1" onclick="setInfusionUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; mg/kg/h</a>
 								</div>
@@ -1232,7 +1243,19 @@
 						<td><input type="number" inputmode="decimal" id="inputInfusion1" min="0" max="1200" step="0.01" placeholder=" " onchange=""></td></tr>
 				</table>
 				<table class="table-control space" id="tableInitialBolus1">
-					<tr><td>Initial bolus (<span class="infused_units"></span>)</td><td><input type="number" inputmode="decimal" id="inputBolus_initial1" min="0" max="2000" step="0.1" placeholder=" " ></td></tr>
+					<tr>
+						<td>
+							<div class="infusionratecontainer" id="boluscontainer1"><span id="bolusdescription1">Initial bolus (<span class="infused_units"></span>)</span>
+								<span class="infusionrateselector" id="bolusselector1" onclick="dropdownshowbolus(1,'')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdown1">
+									<a class="infusionratedropdownitem" id="bolusoption0_1" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoption1_1" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoption2_1" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+							</div>
+						</td>
+						<td><input type="number" inputmode="decimal" id="inputBolus_initial1" min="0" max="2000" step="0.1" placeholder=" " ></td></tr>
 				</table>
 				<a class="button" id="btn_start1" onclick="start_manual(1);">Start</a>
 				<a class="button" id="btn_pause1" onclick="pause(1);">Pause</a>
@@ -1397,9 +1420,20 @@
 			<div class="cardtitle">BOLUS</div>
 			<div class="cardcontents">
 				<table class="table-control space">
-					<tr class="fr"><td>Custom bolus (<span class="infused_units"></span>)</td>
-						<td width="30px"><input type="number" id="inputBolus0"></td>
-						<td><a class="button custom" id="" min="0" max="2000" step="0.1" placeholder=" " onclick="bolusadmin(custombolus(0),0);">Go!</button></a></td>
+
+
+					<tr class="fr">
+						<td>
+							<div class="infusionratecontainer" id="boluscontainercopy0"><span id="bolusdescriptioncopy0">Custom bolus (<span class="infused_units"></span>)</span> <span class="infusionrateselector" id="bolusselectorcopy0" onclick="dropdownshowbolus(0,'copy')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdowncopy0">
+									<a class="infusionratedropdownitem" id="bolusoptioncopy0_0" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy1_0" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy2_0" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+						</td>
+						<td width="30px"><input type="number" id="inputBolus0" min="0" max="2000" step="0.1" placeholder=" "></td>
+						<td><a class="button custom" id="" onclick="bolusadmin(custombolus(0),0);">Go!</button></a></td>
 					</tr></table>
 				
 				<a class="button bolus" id="bolus3" onclick="bolusadmin(30,0);"><div class="bolus_outside">Bolus</div><div class="bolus_inside">30<span class="infused_units"></span></div></a>
@@ -1411,7 +1445,18 @@
 			<div class="cardtitle">BOLUS.</div>
 			<div class="cardcontents">
 				<table class="table-control space">
-					<tr class="fr"><td>Custom bolus (<span class="infused_units"></span>)</td>
+					<tr class="fr">
+						<td>
+							<div class="infusionratecontainer" id="boluscontainercopy1"><span id="bolusdescriptioncopy1">Custom bolus (<span class="infused_units"></span>)</span>
+								<span class="infusionrateselector" id="bolusselectorcopy1" onclick="dropdownshowbolus(0,'')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdowncopy1">
+									<a class="infusionratedropdownitem" id="bolusoptioncopy0_1" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy1_1" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy2_1" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+							</div>
+						</td>
 						<td width="30px"><input type="number" id="inputBolus1"></td>
 						<td><a class="button custom" id="" min="0" max="2000" step="0.1" placeholder=" " onclick="bolusadmin(custombolus(1),1);">Go!</button></a></td>
 					</tr></table>
@@ -1738,6 +1783,15 @@
 							<select id="select_defaultrateunit">
 								<option value="mlh">ml/h</option>
 								<option value="unitkgtime">mg/kg/h</option>
+							</select>
+						</td>
+					</tr>
+					<tr class="" id="option_defaultbolusunit"><td>Default bolus unit <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:160px">Unit for entering manual mode bolus, e.g. "mg" vs "mg/kg" vs "ml" (or appropriate units)</span></i></td>
+						<td>
+							<select id="select_defaultbolusunit">
+								<option value="mg">mg</option>
+								<option value="mgkg">mg/kg</option>
+								<option value="ml">ml</option>
 							</select>
 						</td>
 					</tr>
