--- a/index.html
+++ b/index.html
@@ -1457,8 +1457,8 @@
 								</div>
 							</div>
 						</td>
-						<td width="30px"><input type="number" id="inputBolus1"></td>
-						<td><a class="button custom" id="" min="0" max="2000" step="0.01" placeholder=" " onclick="bolusadmin(custombolus(1),1);">Go!</button></a></td>
+						<td width="30px"><input type="number" id="inputBolus1" min="0" max="2000" step="0.01" placeholder=" " ></td>
+						<td><a class="button custom" id="" onclick="bolusadmin(custombolus(1),1);">Go!</button></a></td>
 					</tr></table>
 				
 				<a class="button bolus" id="bolus3_1" onclick="bolusadmin(30,1);"><div class="bolus_outside">Bolus</div><div class="bolus_inside">30<span class="infused_units"></span></div></a>
