--- a/view.html
+++ b/view.html
@@ -542,10 +542,28 @@
 				<div class="cardtitle">INFUSION</div>
 			<div class="cardcontents">
 				<table class="table-control line" id="tableInfusionRate0">
-					<tr class="fr"><td>Infusion rate (ml/h)</td><td><input type="number" inputmode="decimal" id="inputInfusion0" min="0" max="100" step="0.1" placeholder=" " onchange=""></td></tr>
+					<tr class="fr"><td>
+							<div class="infusionratecontainer" id="infusionratecontainer0"><span id="infusionratedescription0">Infusion rate (ml/h)</span> 
+								<span class="infusionrateselector" id="infusionrateselector0" onclick="dropdownshow(0)"><i class="fas fa-chevron-down"></i></span>
+								<div class="infusionratedropdown" id="infusionratedropdown0">
+									<a class="infusionratedropdownitem" id="infusionrateoption0" onclick="setInfusionUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; ml/h</a>
+									<a class="infusionratedropdownitem" id="infusionrateoption1" onclick="setInfusionUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; mg/kg/h</a>
+								</div>
+							</div>
+						</td><td><input type="number" inputmode="decimal" id="inputInfusion0" min="0" max="100" step="0.1" placeholder=" " onchange=""></td></tr>
 				</table>
 				<table class="table-control space" id="tableInitialBolus0">
-					<tr><td>Initial bolus (<span class="infused_units"></span>)</td><td><input type="number" inputmode="decimal" id="inputBolus_initial0" min="0" max="2000" step="0.1" placeholder=" " ></td></tr>
+					<tr><td>
+							<div class="infusionratecontainer" id="boluscontainer0"><span id="bolusdescription0">Initial bolus (<span class="infused_units"></span>)</span>
+								<span class="infusionrateselector" id="bolusselector0" onclick="dropdownshowbolus(0,'')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdown0">
+									<a class="infusionratedropdownitem" id="bolusoption0_0" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoption1_0" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoption2_0" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+							</div>
+						</td><td><input type="number" inputmode="decimal" id="inputBolus_initial0" min="0" max="2000" step="0.01" placeholder=" " ></td></tr>
 				</table>
 				<a class="button" id="btn_start0" onclick="start_manual(0);">Start</a>
 				<a class="button" id="btn_pause0" onclick="pause(0);">Pause</a>
@@ -555,10 +573,28 @@
 				<div class="cardtitle">INFUSION.</div>
 			<div class="cardcontents">
 				<table class="table-control line" id="tableInfusionRate1">
-					<tr class="fr"><td>Infusion rate (ml/h)</td><td><input type="number" inputmode="decimal" id="inputInfusion1" min="0" max="100" step="0.1" placeholder=" " onchange=""></td></tr>
+					<tr class="fr"><td>
+							<div class="infusionratecontainer" id="infusionratecontainer1"><span id="infusionratedescription1">Infusion rate (ml/h)</span> 
+								<span class="infusionratecontainer" id="infusionrateselector1" onclick="dropdownshow(1)"><i class="fas fa-chevron-down"></i></span>
+								<div class="infusionratedropdown" id="infusionratedropdown1">
+									<a class="infusionratedropdownitem" id="infusionrateoptioncopy0" onclick="setInfusionUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; ml/h</a>
+									<a class="infusionratedropdownitem" id="infusionrateoptioncopy1" onclick="setInfusionUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; mg/kg/h</a>
+								</div>
+							</div>
+						</td><td><input type="number" inputmode="decimal" id="inputInfusion1" min="0" max="100" step="0.1" placeholder=" " onchange=""></td></tr>
 				</table>
 				<table class="table-control space" id="tableInitialBolus1">
-					<tr><td>Initial bolus (<span class="infused_units"></span>)</td><td><input type="number" inputmode="decimal" id="inputBolus_initial1" min="0" max="2000" step="0.1" placeholder=" " ></td></tr>
+					<tr><td>
+							<div class="infusionratecontainer" id="boluscontainer1"><span id="bolusdescription1">Initial bolus (<span class="infused_units"></span>)</span>
+								<span class="infusionrateselector" id="bolusselector1" onclick="dropdownshowbolus(1,'')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdown1">
+									<a class="infusionratedropdownitem" id="bolusoption0_1" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoption1_1" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoption2_1" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+							</div>
+						</td><td><input type="number" inputmode="decimal" id="inputBolus_initial1" min="0" max="2000" step="0.01" placeholder=" " ></td></tr>
 				</table>
 				<a class="button" id="btn_start1" onclick="start_manual(1);">Start</a>
 				<a class="button" id="btn_pause1" onclick="pause(1);">Pause</a>
@@ -723,9 +759,17 @@
 			<div class="cardtitle">BOLUS</div>
 			<div class="cardcontents">
 				<table class="table-control space">
-					<tr class="fr"><td>Custom bolus (<span class="infused_units"></span>)</td>
-						<td width="30px"><input type="number" id="inputBolus0"></td>
-						<td><a class="button custom" id="" min="0" max="2000" step="0.1" placeholder=" " onclick="bolusadmin(custombolus(0),0);">Go!</button></a></td>
+					<tr class="fr"><td>
+							<div class="infusionratecontainer" id="boluscontainercopy0"><span id="bolusdescriptioncopy0">Custom bolus (<span class="infused_units"></span>)</span> <span class="infusionrateselector" id="bolusselectorcopy0" onclick="dropdownshowbolus(0,'copy')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdowncopy0">
+									<a class="infusionratedropdownitem" id="bolusoptioncopy0_0" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy1_0" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy2_0" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+						</td>
+						<td width="30px"><input type="number" id="inputBolus0" min="0" max="2000" step="0.01" placeholder=" " ></td>
+						<td><a class="button custom" id="" onclick="bolusadmin(custombolus(0),0);">Go!</button></a></td>
 					</tr></table>
 				
 				<a class="button bolus" id="bolus3" onclick="bolusadmin(30,0);"><div class="bolus_outside">Bolus</div><div class="bolus_inside">30<span class="infused_units"></span></div></a>
@@ -737,9 +781,20 @@
 			<div class="cardtitle">BOLUS.</div>
 			<div class="cardcontents">
 				<table class="table-control space">
-					<tr class="fr"><td>Custom bolus (<span class="infused_units"></span>)</td>
-						<td width="30px"><input type="number" id="inputBolus1"></td>
-						<td><a class="button custom" id="" min="0" max="2000" step="0.1" placeholder=" " onclick="bolusadmin(custombolus(1),1);">Go!</button></a></td>
+					<tr class="fr">
+						<td>
+							<div class="infusionratecontainer" id="boluscontainercopy1"><span id="bolusdescriptioncopy1">Custom bolus (<span class="infused_units"></span>)</span>
+								<span class="infusionrateselector" id="bolusselectorcopy1" onclick="dropdownshowbolus(0,'')"><i class="fas fa-chevron-down"></i></span>
+							</div>
+								<div class="infusionratedropdown" id="bolusdropdowncopy1">
+									<a class="infusionratedropdownitem" id="bolusoptioncopy0_1" onclick="setBolusUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span></a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy1_1" onclick="setBolusUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; <span class="infused_units"></span>/kg</a>
+									<a class="infusionratedropdownitem" id="bolusoptioncopy2_1" onclick="setBolusUnit(2)"><i class="far fa-circle infusioncheck"></i>&nbsp; ml</a>
+								</div>
+							</div>
+						</td>
+						<td width="30px"><input type="number" id="inputBolus1"  min="0" max="2000" step="0.01" placeholder=" " ></td>
+						<td><a class="button custom" id=""onclick="bolusadmin(custombolus(1),1);">Go!</button></a></td>
 					</tr></table>
 				
 				<a class="button bolus" id="bolus3_1" onclick="bolusadmin(30,1);"><div class="bolus_outside">Bolus</div><div class="bolus_inside">30<span class="infused_units"></span></div></a>
@@ -1058,6 +1113,23 @@
 								<option value="mcgmin">mcg/kg/m</option>
 							</select>
 						</td>
+					<tr class="" id="option_defaultrateunit"><td>Default rate unit <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:160px">Unit for entering manual mode infusion rate, e.g. "ml/h" vs "mg/kg/h" (or appropriate units)</span></i></td>
+						<td>
+							<select id="select_defaultrateunit">
+								<option value="mlh">ml/h</option>
+								<option value="unitkgtime">mg/kg/h</option>
+							</select>
+						</td>
+					</tr>
+					<tr class="" id="option_defaultbolusunit"><td>Default bolus unit <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:160px">Unit for entering manual mode bolus, e.g. "mg" vs "mg/kg" vs "ml" (or appropriate units)</span></i></td>
+						<td>
+							<select id="select_defaultbolusunit">
+								<option value="mg">mg</option>
+								<option value="mgkg">mg/kg</option>
+								<option value="ml">ml</option>
+							</select>
+						</td>
+					</tr>
 					<tr id="option_simspeed_row"><td>Simspeed</td>
 						<td>
 							<select id="select_simspeed">
