--- a/view.html
+++ b/view.html
@@ -1436,6 +1436,6 @@ document.addEventListener('scroll', (event) => {
 	<script>
 
 	</script>
-	<script>setTimeout(function() {parseobject()},1000);</script>
+	<script>setTimeout(function() {loadoptions();parseobject()},1000);</script>
 </body>
 </html>
