--- a/index.html
+++ b/index.html
@@ -1341,19 +1341,20 @@
 			</div>
 		</div>
 
-					<div class="input-container" id="card_cet0">
+					<div class="input-container" id="card_cet0_new">
 						<div class="input-left">
-							<div class="input-description"><span style="font-size: 1.5rem;line-height:14px;font-weight:bold">CeT</span><br>(<span class="conc_units"></span>/ml)</div>
-							<div class="input-entry"><input class="input-entry-field" type="number" inputmode="decimal" style="" id="inputDesiredCe0" onfocus="this.nextElementSibling.style.display='inline-block';" min="0" max="200" step="0.1" placeholder=" " onkeyup="displaypreview(this.value,0)"></div>
+							<div class="input-target-icon"><i class="fas fa-brain fa-fw"></i></div>
+							<div class="input-description"><span id="input-description-ce-line1" style="font-size: 1.3rem;font-weight:bold;display:block"><span>Ce Target</span></span>(<span class="conc_units"></span>/ml)</div>
+							<div class="input-entry"><input class="input-entry-field" type="number" inputmode="decimal" style="" id="inputDesiredCe0" min="0" max="200" step="0.1" placeholder=" " onkeyup="displaypreview(this.value,0)"></div>
 						</div>
 						<div class="input-right">
-							<div class=""><a class="button input-button" id="btn_startCet0" onclick="start_cet();"><div class="icon"><i class="fas fa-play fa-fw"></i></div><div class="input-button-text">Start</div></a></div>
-							<div class=""><a class="button input-button" id="btn_pauseCet0" onclick="pauseCpt(0);"><div class="icon"><i class="fas fa-pause fa-fw"></i></div><div class="input-button-text">Pause</div></a></div>
+							<div class="input-button-container"><a class="button input-button" id="btn_startCet0" onclick="start_cet();"><div class="icon"><i class="fas fa-play fa-fw"></i></div><div class="input-button-text">Start</div></a></div>
+							<div class="input-button-container"><a class="button input-button" id="btn_pauseCet0" onclick="pauseCpt(0);"><div class="icon"><i class="fas fa-pause fa-fw"></i></div><div class="input-button-text">Pause</div></a></div>
 						</div>
 					</div>
 
 
-		<div class="card" id="" style="display:none">
+		<div class="card" id="card_cet0" style="display:none">
 			<div class="cardtitle">Ce TARGETING</div>
 			<div class="cardcontents">
 				
