--- a/index.html
+++ b/index.html
@@ -1330,12 +1330,11 @@
 				<a class="button" id="btn_pauseCpt0" onclick="pauseCpt(0); drug_sets[0].cpt_active=0.5;">Pause</a>
 			</div>
 		</div>
-		-->
-		<!-- end obsolete-->
+
 		<div class="card" id="card_cpt1" style="display:none;">
 			<div class="cardtitle">Cp TARGETING.</div>
 			<div class="cardcontents">
-				<table class="table-control space" id="tableCpt">
+				<table class="table-control space" id="">
 					<tr class="fr"><td>Enter Cp (<span class="conc_units"></span>/ml)</td><td><input type="number" inputmode="decimal" id="inputDesired1"  min="0.1" max="200" step="0.1" placeholder=" " oninput="displaypreview(this.value,1);"></td></tr>
 				</table>
 				<a class="button" id="btn_startCpt1" onclick="
@@ -1344,6 +1343,9 @@
 				<a class="button" id="btn_pauseCpt1" onclick="pauseCpt(1); drug_sets[1].cpt_active=0.5;">Pause</a>
 			</div>
 		</div>
+
+		-->
+		<!-- end obsolete-->
 
 		<!-- new interface styles update 2024 -->
 
@@ -1359,6 +1361,20 @@
 			</div>
 		</div>
 
+
+		<div class="input-container" id="card_cpt1" style="display:none">
+			<div class="input-left">
+				<div class="input-target-icon"><i class="fas fa-tint fa-fw"></i></div>
+				<div class="input-description"><span id="input-description-cp1-line1" style="font-size: 1.3rem;font-weight:bold;display:block"><span>Cp Target</span></span>(<span class="conc_units"></span>/ml)</div>
+				<div class="input-entry"><input class="input-entry-field" type="number" inputmode="decimal" style="" id="inputDesired1" min="0" max="200" step="0.1" placeholder=" " onkeyup="displaypreview(this.value,1)"></div>
+			</div>
+			<div class="input-right">
+				<div class="input-button-container"><a class="button input-button" id="btn_startCpt1_new" onclick="start_cpt_complex(document.getElementById('inputDesired1').value*1,1)"><div class="icon"><i class="fas fa-play fa-fw"></i></div><div class="input-button-text">Start</div></a></div>
+				<div class="input-button-container"><a class="button input-button" id="btn_pauseCpt1_new" onclick="pauseCpt(0); drug_sets[1].cpt_active=0.5;"><div class="icon"><i class="fas fa-pause fa-fw"></i></div><div class="input-button-text">Pause</div></a></div>
+			</div>
+		</div>
+
+
 		<div class="input-container" id="card_cet0_new" style="">
 			<div class="input-left">
 				<div class="input-target-icon"><i class="fas fa-brain fa-fw"></i></div>
@@ -1371,6 +1387,20 @@
 			</div>
 		</div>
 
+		<div class="input-container" id="card_cet1_new" style="display:none">
+			<div class="input-left">
+				<div class="input-target-icon"><i class="fas fa-brain fa-fw"></i></div>
+				<div class="input-description"><span id="input-description-ce1-line1" style="font-size: 1.3rem;font-weight:bold;display:block"><span>Ce Target</span></span>(<span class="conc_units"></span>/ml)</div>
+				<div class="input-entry"><input class="input-entry-field" type="number" inputmode="decimal" style="" id="inputDesiredCe1_new" min="0" max="200" step="0.1" placeholder=" " onkeyup="displaypreview(this.value,1)"></div>
+			</div>
+			<div class="input-right">
+				<div class="input-button-container"><a class="button input-button" id="btn_startCet1_new" onclick="start_cet_complex(document.getElementById('inputDesiredCe1_new').value*1,1);"><div class="icon"><i class="fas fa-play fa-fw"></i></div><div class="input-button-text">Start</div></a></div>
+				<div class="input-button-container"><a class="button input-button" id="btn_pauseCet1_new" onclick="pauseCpt(1);"><div class="icon"><i class="fas fa-pause fa-fw"></i></div><div class="input-button-text">Pause</div></a></div>
+			</div>
+		</div>
+
+
+		<!-- end new interface styles -->
 
 		<div class="card" id="card_cet0" style="">
 			<div class="cardtitle">Ce TARGETING</div>
