previewCP/CE interface

--- a/index.html
+++ b/index.html
@@ -1178,8 +1178,9 @@
 						<div style="line-height:1.2;padding-top:2px;font-size:95%" id="preview_msg"></div>
 					</div>
 				</div>
+				<div class="" id="preview-expand-button" onclick="displaypreview_expand();"><i class="fas fa-angle-double-down"></i> &nbsp; <span>EXPAND</span></div>
+				<div class="" id="preview-expand-box"></div>
 				<div class="prompts_card" id="prompt" style="border-color:#9bc99d">
-
 					<div id="promptleft"><i class="fas fa-info-circle" id="prompticon"></i></div>
 					<div id="promptright">
 						<div style="font-size:80%; font-weight:bold; border-bottom:1px solid #9bc99d; padding-bottom:2px"><span id="prompt_msg2">Current rate</span></div>
