revampUI update warning screen

--- a/index.html
+++ b/index.html
@@ -1943,6 +1943,15 @@
 		</div>
 
 		</div><!--controlpanel-->
+		<div class="warningbanner">
+			<div class="warningbanner_left">
+				<i class="fas fa-exclamation-triangle"></i>
+			</div>
+			<div class="warningbanner_right">
+				<div class="warningbanner_up"><b>WARNING</b> - Simulation is ending!</div>
+				<div class="warningbanner_down">Simulation session expiring in &lt;10 mins. Update CP/CE target to continue using SimTIVA to avoid data loss.</div>
+			</div>
+		</div>
 		<div class="footer">
 			<b>SIMTiva</b>&nbsp;|&nbsp;Terence Luk 2023
 			<ul>
