--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 						<td>
 							<select id="select_model" onchange="sendToValidate(0)" >
 								
+									<option value="Beths">Beths (Propofol)</option>
+									
 									<option value="Marsh">Propofol (Marsh)</option>
 									<option value="Schnider">Propofol (Schnider)</option>
 									<option value="Paedfusor">Propofol (Paedfusor)</option>
