--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 					<table class="table-Init" style="margin-top:1.5rem;margin-bottom:2rem">
 
 					<tr class="fr">
-						<td>Weight (kg) <i class="far fa-question-circle tooltip"><span class="tooltiptext">0-200kg, validation with BMI & weight-for-age</span></i></td>
+						<td>Weight (kg) <!--<i class="far fa-question-circle tooltip"><span class="tooltiptext">0-200kg, validation with BMI & weight-for-age</span></i>--></td>
 						<td><input type="number" inputmode="decimal" id="inputBW" min="0.1" max="200" step="0.01" placeholder=" " onkeyup="" required/></td>
 					</tr>
 
 
-					<tr><td>Model <i class="far fa-question-circle tooltip2"><span class="tooltiptext">Paedfusor: for children. Marsh/Schnider/Minto: for adults.</span></i></td>
+					<tr><td>Model <!--<i class="far fa-question-circle tooltip2"><span class="tooltiptext">Paedfusor: for children. Marsh/Schnider/Minto: for adults.</span></i>--></td>
 						<td>
 							<select id="select_model" onchange="" >
 								
