--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<meta name="description" content="Simple and free TIVA simulator">
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
-    <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
+    <title>Vet.SimTIVA | Veterinary Simulator for TIVA/TCI</title>
 </head>
 <body class="" id="windowbody">
 		<div id="rescuebuttons">
@@ -1809,7 +1809,7 @@
 		</div>
 		</div><!--end cards container layout-->
 		<div class="bottomcard">
-			<h1>Vet.SimTIVA is a computer simulation program to simulate delivery of total intravenous anaesthesia (TIVA) using a target-controlled infusion (TCI) pump. This progressive web app (PWA) is designed for use on smartphones, tablets and computers.</h1>
+			<h1>Vet.SimTIVA <i>(Veterinary Simulator for TIVA)</i> is an experimental progressive web app to guide total intravenous anaesthesia (TIVA) using Beths model for target-controlled infusion (TCI) in dogs. It simulates delivery of TIVA using a TCI pump.</h1>
 		</div>
 
 		</div><!--controlpanel-->
@@ -1823,7 +1823,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<b>Vet.SIMTiva</b>&nbsp;|&nbsp;Terence Luk 2023
+			<b>Vet.SIMTiva</b>&nbsp;|&nbsp;Terence Luk 2024
 			<ul>
 				<li><a href="#" onclick="setmodal('modalAbout');">About</a></li>
 				<li><a href="https://simtiva.blogspot.com/" target="_blank">Blog</a></li>
