--- a/index.html
+++ b/index.html
@@ -119,11 +119,40 @@
 						<td><input type="number" inputmode="decimal" id="inputBW" min="0.1" max="200" step="0.01" placeholder=" " onkeyup="" required/></td>
 					</tr>
 
+					<tr class="" id="row_age">
+						<td >Age (y) <i class="far fa-question-circle tooltip"><span class="tooltiptext" style="width: 80px; line-height:20px">0-100y</span></i></td>
+						<td><input type="number" inputmode="decimal" id="inputAge" min="0.1" max="99" step="0.1" placeholder=" " onkeyup="" /></td>
+					</tr>
+
+					<tr id="row_gender"><td>Gender</td>
+						<td>
+							<select id="select_gender" onchange="" >
+								<option value="Male">Male</option>
+								<option value="Female">Female</option>
+							</select>
+						</td>
+					</tr>
+
+					<tr id="row_fendilution"><td style="letter-spacing:-0.5px">Concentration <span style="font-size: 85%">(mcg/ml)</span></td>
+						<td>
+							<select id="select_fendilution" onchange="change_fendilution(this.value)"> 
+								<option value="10">10mcg/ml</option>
+								<option value="20">20mcg/ml</option>
+								<option value="25">25mcg/ml</option>
+								<option value="50" selected>50mcg/ml</option>
+								<option value="custom">Custom</option>
+							</select>
+							<div id="custom_fendilution" onclick="popup_dilution('fendilution','Fentanyl')">
+								<span id="fendilution">_</span>mcg/ml
+							</div>
+						</td>
+					</tr>
 
 					<tr><td>Model <!--<i class="far fa-question-circle tooltip2"><span class="tooltiptext">Paedfusor: for children. Marsh/Schnider/Minto: for adults.</span></i>--></td>
 						<td>
 							<select id="select_model" onchange="" >
 									<option value="Beths">Beths (Propofol)</option>
+									<option value="Cattai-Fentanyl">Cattai (Fentanyl)</option>
 							</select>
 						</td>
 					</tr>
