--- a/index.html
+++ b/index.html
@@ -110,23 +110,38 @@
 				<div class="modal-header">Enter patient data<!--<span class="close notcondensed" onClick="hideallmodal()">&times;</span>--><img onclick="displayAbout();" src="apple-touch-icon-180x180.png" style="position:absolute;right:6px;width:44px;cursor:pointer"></div>
 				<div class="modal-body">
 
-					<div style="font-size:1.7rem;font-weight:bold">Vet.SimTIVA<span style="opacity: 0.5">.app</span></div>
-					<div style="margin-top:0.5rem;margin-bottom:0.5rem"><i>Welcome to Veterinary Simulator for TIVA:</i> an experimental progressive web app to guide TIVA using Beths model for TCI in dogs.</div>
+					<div style="font-size:1.6rem;font-weight:bold">Vet.SimTIVA<span style="opacity: 0.5">.app</span></div>
+					<div style="margin-top:0.5rem;margin-bottom:0.5rem;font-size:0.75rem"><i>Welcome to Veterinary Simulator for TIVA:</i> an experimental progressive web app to guide TCI/TIVA in dogs.</div>
 					<table class="table-Init" style="margin-top:1.5rem;margin-bottom:2rem">
 
-					<tr class="fr">
+					<tr class="fr"><td>Model <!--<i class="far fa-question-circle tooltip2"><span class="tooltiptext">Paedfusor: for children. Marsh/Schnider/Minto: for adults.</span></i>--></td>
+						<td>
+							<select id="select_model" onchange="updateInit();" >
+									<option value="Beths">Beths (Propofol)</option>
+									<option value="Cattai-Fentanyl">Cattai (Fentanyl)</option>
+							</select>
+						</td>
+					</tr>
+					<tr>
+						<td>Mode</td>
+						<td>
+							<select id="select_mode" onchange="" >
+									<option value="cpt">CP targeting</option>
+									<option value="manual">Manual</option>
+							</select>
+					</tr>
+					<tr>
 						<td>Weight (kg) <!--<i class="far fa-question-circle tooltip"><span class="tooltiptext">0-200kg, validation with BMI & weight-for-age</span></i>--></td>
 						<td><input type="number" inputmode="decimal" id="inputBW" min="0.1" max="200" step="0.01" placeholder=" " onkeyup="" required/></td>
 					</tr>
-
-					<tr class="" id="row_age">
+					<tr id="row_age">
 						<td >Age (y) <i class="far fa-question-circle tooltip"><span class="tooltiptext" style="width: 80px; line-height:20px">0-100y</span></i></td>
 						<td><input type="number" inputmode="decimal" id="inputAge" min="0.1" max="99" step="0.1" placeholder=" " onkeyup="" /></td>
 					</tr>
 
 					<tr id="row_gender"><td>Gender</td>
 						<td>
-							<select id="select_gender" onchange="" >
+							<select id="select_gender" onchange="if (this.value == 'Male') {gender = 0} else {gender = 1}" >
 								<option value="Male">Male</option>
 								<option value="Female">Female</option>
 							</select>
@@ -146,24 +161,6 @@
 								<span id="fendilution">_</span>mcg/ml
 							</div>
 						</td>
-					</tr>
-
-					<tr><td>Model <!--<i class="far fa-question-circle tooltip2"><span class="tooltiptext">Paedfusor: for children. Marsh/Schnider/Minto: for adults.</span></i>--></td>
-						<td>
-							<select id="select_model" onchange="" >
-									<option value="Beths">Beths (Propofol)</option>
-									<option value="Cattai-Fentanyl">Cattai (Fentanyl)</option>
-							</select>
-						</td>
-					</tr>
-
-					<tr>
-						<td>Mode</td>
-						<td>
-							<select id="select_mode" onchange="" >
-									<option value="cpt">CP targeting</option>
-									<option value="manual">Manual</option>
-							</select>
 					</tr>
 
 
@@ -905,8 +902,7 @@
 							
 						</div>
 						<div><b>BW:<span id="bw"></span></b><!--, BH:<span id="bh"></span>--></div>
-						<span id="gender" style="display:none"></span>
-						<!--<div><span id="age"></span>, <span id="gender"></span><span id="temptimedisplay" style="float:right; opacity:50%"></span></div>-->
+						<div><span id="age"></span><span id="gender"></span></div><!--<span id="temptimedisplay" style="float:right; opacity:50%"></span></div>-->
 					</div>
 				</div>
 			</div>
