--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
 						</td>
 					</tr>
 					<tr>
-						<td>Mode</td>
+						<td>Mode <i class="far fa-question-circle tooltip"><span class="tooltiptext" style="width: 160px">CE targeting: experimental; for propofol</span></i></td>
 						<td>
 							<select id="select_mode" onchange="" >
 									<option value="cpt">CP targeting</option>
+									<option value="cet">CE targeting</option>
 									<option value="manual">Manual</option>
 							</select>
 					</tr>
@@ -1834,7 +1835,7 @@
 		</div>
 		</div><!--end cards container layout-->
 		<div class="bottomcard">
-			<h1>Vet.SimTIVA <i>(Veterinary Simulator for TIVA)</i> is an experimental progressive web app to guide total intravenous anaesthesia (TIVA) using Beths model for target-controlled infusion (TCI) in dogs. It simulates delivery of TIVA using a TCI pump.</h1>
+			<h1>Vet.SimTIVA <i>(Veterinary Simulator for TIVA)</i> is a web app to guide total intravenous anaesthesia (TIVA) for target-controlled infusion (TCI) in dogs. TCI simulation models include Beths model (propofol) and Cattai model (fentanyl).</h1>
 		</div>
 
 		</div><!--controlpanel-->
