--- a/index.html
+++ b/index.html
@@ -1835,7 +1835,7 @@
 		</div>
 		</div><!--end cards container layout-->
 		<div class="bottomcard">
-			<h1>Vet.SimTIVA <i>(Veterinary Simulator for TIVA)</i> is a web app to guide total intravenous anaesthesia (TIVA) for target-controlled infusion (TCI) in dogs. TCI simulation models include Beths model (propofol) and Cattai model (fentanyl).</h1>
+			<h1>Vet.SimTIVA <i>(Veterinary Simulator for TIVA)</i> is a web app to guide total intravenous anaesthesia (TIVA) for target-controlled infusion (TCI) in dogs; using models such as Beths model (propofol) and Cattai model (fentanyl).</h1>
 		</div>
 
 		</div><!--controlpanel-->
